# military-sim

./: .gitignore  README.md  pyproject.toml
military_sim/: __main__.py
tests/: test_military_sim.py
