[tool.poetry]
name = "military-sim"
version = "0.1.0"
description = "Military simulator game"
authors = ["ninest", "your username"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
